# payment_app

./: .env.template  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/payment_app/: manage.py  payment_app_db  payment_db  start_app.sh
src/payment_app/cart/: cart.py  context_processor.py
src/payment_app/cart/business_logic/: errors.py  services.py
src/payment_app/cart/presentation_layer/web/: urls.py  views.py
src/payment_app/payment/business_logic/api/: __init__.py  stripe.py
src/payment_app/payment/business_logic/services/: __init__.py  exchange.py  tax.py
src/payment_app/payment/presentation_layer/web/: urls.py  views.py
src/payment_app/payment_app/: logger_formatter.py  settings.py  urls.py
src/payment_app/shop/: admin.py
src/payment_app/shop/business_logic/: dto.py  errors.py
src/payment_app/shop/business_logic/services/: __init__.py  categories.py  currency.py  discount.py  item.py  order.py
src/payment_app/shop/migrations/: 0001_initial.py  0002_populate_currency_table_by_default_values.py  0003_populate_exchange_table_by_default_values.py  0004_populate_discounts_table_by_default_values.py  0005_populate_tax_table_by_default_values.py  0006_populate_categories_table.py
src/payment_app/shop/models/: __init__.py  base.py  category.py  currency.py  discount.py  item.py  order.py  order_items.py  tax.py
src/payment_app/shop/presentation_layer/common/: converters.py  validators.py
src/payment_app/shop/presentation_layer/web/: urls.py  validators.py
src/payment_app/shop/static/css/: cart_nav.css  (+2 more)
(+21 files in other folders)
