[tool.poetry]
name = "payment-app"
version = "0.1.0"
description = ""
authors = ["Aliaksei Kastsiuchonak <kostkost30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0"
stripe = "7.9.0"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.9"
pillow = "^10.1.0"
dacite = "^1.8.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"


[tool.mypy]
mypy_path = "src/payment_app/"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.black]
skip-string-normalization = false
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
